# rpi-simple-debugger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: GUIDE.md  writeup.md
docs/diagrams/: ai-board-detection.excalidraw  architecture.excalidraw  data-flow.excalidraw  gpio-abstraction.excalidraw  process-flow.excalidraw
src/rpi_simple_debugger/: __init__.py  __main__.py  app.py  config.py  engine.py  gpio_backend.py  gpio_monitor.py  models.py  network_monitor.py  server.py  system_monitor.py
tests/: test_app.py  test_config.py  test_engine.py  test_gpio_backend.py  test_gpio_monitor.py  test_imports.py  test_models.py  test_network_monitor.py  test_system_monitor.py  ws_subscriber.py
